[metadata]
name = SimpleDeco
version = 0.0.3
author = Artyom Ivanov
author_email = a@tmat.me
description = Decorators without nested functions
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tm-a-t/SimpleDeco
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9

[options.packages.find]
where = src
